--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,36 +1,79 @@
 /*Estilos App Web*/
 
+
 body {
-    padding:0%;
-    margin:0%;
-    background-image: url(/img/pattern-fondo-web.png);
-    background-size: cover;
+  padding:0%;
+  margin:0%;
+  background-image: url(/img/pattern-fondo-web.png);
+  background-size: cover;
+  color: #23282C;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
 }
 
-#contenedor-superior {
-    background-color: #315275;
-    height: 60px;
-    border-bottom-right-radius: 12px;
+.cabezote {
+  display: flex;
+  justify-content: space-between;
+  background-color: #315275;
+  height: 60px;
+  border-bottom-right-radius: 12px;
+  padding: 0px 4.33%;
 }
 
 .linea-degrade {
-    background: linear-gradient(90deg, #315275 40%, #509999);
-    /*background-color: blueviolet;*/
-    height: 12px;
+  background: linear-gradient(90deg, #315275 40%, #509999);
+  width: 100%;
+  height: 12px;
+  position: absolute;
 }
 
-.logo-utadeo {
-    background-color: #2986e9;
+.logo img {
+  width: 260px;
+  height: 55px;
+}
+
+header nav ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 20px;
+}
+header nav ul li a {
+  text-decoration: none;
+}
+
+.contenedor-logo {
+  background-color: #9bbee4;
+  padding: 20px;
+}
+
+/*Botones*/
+
+.boton-superior {
+  background-color: #509999;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 .boton-basico {
-    background-color: #509999;
+  background-color: #509999;
+  width: 147px;
+  height: 50px;
+  color: #F9F8F3;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
 }
+
 
 /*Media Query Paginas Responsive*/
 
 /*Tamaño: Dispositivos extra pequeños*/
 @media only screen and (max-width: 600px) {
+  
+    header {
+      flex-direction: column;
+    }
+
     body {
       background-color: lightblue;
       background-size: cover;
@@ -40,6 +83,7 @@ body {
 
   /*Tamaño: Dispositivos pequeños*/
 @media only screen and (min-width: 600px) {
+  
     body {
       background-color: rgb(173, 230, 181);
       background-size: 50%;
@@ -59,7 +103,7 @@ body {
 /*Tamaño: Dispositivos Grandes*/
 @media only screen and (min-width: 992px) {
     body {
-      background-color: rgb(226, 179, 107);
+      background-color: #F9F8F3;
       background-size: 33.33%;
       background-repeat: repeat;
     }
@@ -68,7 +112,7 @@ body {
 /*Tamaño: Dispositivos Extra Grandes*/
 @media only screen and (min-width: 1200px) {
     body {
-      background-color: rgb(230, 173, 206);
+      background-color: #F9F8F3;
       background-size: 33.33%;
       background-repeat: repeat;
     }
