--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,6 +40,7 @@ body {
   width: 260px;
   height: 55px;
 }
+
 .logo-utadeo {
   width: 260px;
   height: 55px;
@@ -173,6 +174,106 @@ footer .grupo-2 {
   color: #509999;
 }
 
+/*-----------------------Inicio Sesión-----------------------
+
+.seccion-inicio-sesion {
+  background-color: #315275;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.subtitulo {
+  color: #F9F8F3;
+  font-family: 'Signika Negative', sans-serif;
+  font-weight: 400;
+  font-size: 32px;
+  text-align: center;
+}
+*/
+.seccion-inicio-sesion {
+  background-color: #315275;
+  width: 440px;
+  margin: auto;
+  margin-top: 80px;
+  margin-bottom: 100px;
+  border-radius: 12px;
+  color: #F9F8F3;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.logo-utadeo-registro {
+  width: 260px;
+  height: 55px;
+  margin: 30px 90px 10px 90px;
+  text-align: center;
+}
+
+.contenedor-formulario {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0px 50px;
+}
+
+.texto-registrarse {
+  display: flex;
+  justify-content: center;
+  padding: 0px 50px;
+  margin-right: 10px;
+  margin-bottom: 40px;
+  font-weight: 300;
+}
+
+.texto-registrarse a {
+  color: #F9F8F3;
+  margin-left: 5px;
+  font-weight: 400;
+}
+
+.texto-registrarse a:hover {
+  color: #5f9950;
+}
+
+.subtitulo {
+  color: #F9F8F3;
+  font-family: 'Signika Negative', sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  text-align: center;
+}
+
+.controles {
+  width: 95%;
+  margin: auto;
+  margin-top: 4px;
+  padding: 8px 0px 8px 10px;
+  border-radius: 11px;
+  border: 1px solid #A8C1DB;
+  color: #9B9B9B;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-style: italic;
+  font-size: 16px;
+}
+
+.linea-degrade-formulario {
+  background: linear-gradient(90deg, #509999, #315275 40%, #509999);
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  width: 100%;
+  height: 12px;
+}
+
+.linea-degrade-formulario-posterior {
+  background: linear-gradient(90deg, #509999, #315275 40%, #509999);
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  width: 100%;
+  height: 12px;
+}
 
 
 /*-----------------------Media Query Paginas Responsive-----------------------*/
