--- a/css/estilos.css
+++ b/css/estilos.css
@@ -275,6 +275,45 @@ footer .grupo-2 {
   height: 12px;
 }
 
+.fichaVerde{
+  position: relative;
+  background:none;
+  border:none;
+  background-color: #5f9950;
+  color: white;
+  border-radius: 6px;
+  font-family: "Trebuchet MS";
+  font-size: 18px;
+  padding:8px 16px;
+  margin: 24px;
+  box-shadow: green -3px 3px 0px,  rgba(0,0,0,0.3) -8px 8px 4px;
+}
+.fichaVerde::before{
+  content:"";
+  display:block;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px 0px 0px 6px;
+  position: absolute;
+  z-index: 2;
+  background-color: #5f9950;
+  top: 12px;
+  left: -12px;
+  box-shadow: green -3px 3px 0px;
+}
+
+.fichaVerde::after{
+  content: "";
+  display: block;
+  width: 12px;
+  height: 12px;
+  border-radius:0px 6px 6px 0px;
+  position: absolute;
+  background-color: #5f9950;
+  top: 12px;
+  right: -12px;
+  box-shadow: green -3px 3px 0px;
+}
 
 /*-----------------------Media Query Paginas Responsive-----------------------*/
 
