--- a/css/estilos.css
+++ b/css/estilos.css
@@ -193,6 +193,8 @@ footer .grupo-2 {
 */
 .seccion-inicio-sesion {
   background-color: #315275;
+  position: relative;
+  z-index: -1;
   width: 440px;
   margin: auto;
   margin-top: 80px;
@@ -275,45 +277,47 @@ footer .grupo-2 {
   height: 12px;
 }
 
-.fichaVerde{
+.fichaVerde {
   position: relative;
-  background:none;
-  border:none;
+  background: none;
+  border: none;
   background-color: #5f9950;
   color: white;
-  border-radius: 6px;
+  border-radius: 12px;
   font-family: "Trebuchet MS";
   font-size: 18px;
-  padding:8px 16px;
-  margin: 24px;
-  box-shadow: green -3px 3px 0px,  rgba(0,0,0,0.3) -8px 8px 4px;
-}
-.fichaVerde::before{
-  content:"";
-  display:block;
-  width: 12px;
-  height: 12px;
-  border-radius: 6px 0px 0px 6px;
-  position: absolute;
-  z-index: 2;
-  background-color: #5f9950;
-  top: 12px;
-  left: -12px;
-  box-shadow: green -3px 3px 0px;
+  padding: 12px 16px;
+  margin: 24px 92px;
+  box-shadow: #37462C -4px 5px 0px, -7px 9px 3px #23282c91;
 }
 
-.fichaVerde::after{
-  content: "";
-  display: block;
-  width: 12px;
-  height: 12px;
-  border-radius:0px 6px 6px 0px;
+.fichaVerde::before {
+  content:"";
+  display:block;
+  width: 18px;
+  height: 18px;
+  border-radius: 12px 0px 0px 12px;
   position: absolute;
   background-color: #5f9950;
-  top: 12px;
-  right: -12px;
-  box-shadow: green -3px 3px 0px;
+  top: 17px;
+  left: -15px;
+  box-shadow: #37462C -4px 5px 0px, -7px 9px 4px #23282c91;
 }
+
+.fichaVerde::after {
+  content: "";
+  display: block;
+  width: 18px;
+  height: 18px;
+  border-radius: 0px 12px 12px 0px;
+  position: absolute;
+  z-index: -2;
+  background-color: #5f9950;
+  top: 10px;
+  right: -14px;
+  box-shadow: #37462C -4px 5px 0px, -7px 7px 4px #23282c91;
+}
+
 
 /*-----------------------Media Query Paginas Responsive-----------------------*/
 
