--- a/css/estilos.css
+++ b/css/estilos.css
@@ -174,27 +174,12 @@ footer .grupo-2 {
   color: #509999;
 }
 
-/*-----------------------Inicio Sesión-----------------------
+/*-----------------------Inicio Sesión-----------------------*/
 
-.seccion-inicio-sesion {
-  background-color: #315275;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.subtitulo {
-  color: #F9F8F3;
-  font-family: 'Signika Negative', sans-serif;
-  font-weight: 400;
-  font-size: 32px;
-  text-align: center;
-}
-*/
 .seccion-inicio-sesion {
   background-color: #315275;
   position: relative;
-  z-index: -1;
+  z-index: 1;
   width: 440px;
   margin: auto;
   margin-top: 80px;
@@ -254,10 +239,9 @@ footer .grupo-2 {
   padding: 8px 0px 8px 10px;
   border-radius: 11px;
   border: 1px solid #A8C1DB;
-  color: #9B9B9B;
+  color: #23282C;
   font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  font-style: italic;
+  font-weight: 400;
   font-size: 16px;
 }
 
@@ -276,6 +260,8 @@ footer .grupo-2 {
   width: 100%;
   height: 12px;
 }
+
+/*Boton Básico*/
 
 .fichaVerde {
   position: relative;
@@ -318,6 +304,46 @@ footer .grupo-2 {
   box-shadow: #37462C -4px 5px 0px, -7px 7px 4px #23282c91;
 }
 
+.fichaVerde:hover {
+  position: relative;
+  background: none;
+  border: none;
+  background-color: #509999;
+  color: white;
+  border-radius: 12px;
+  font-family: "Trebuchet MS";
+  font-size: 18px;
+  padding: 12px 16px;
+  margin: 24px 92px;
+  box-shadow: #1D3045 -4px 5px 0px, -7px 9px 3px #23282c91;
+}
+
+.fichaVerde:hover::before {
+  content:"";
+  display:block;
+  width: 18px;
+  height: 18px;
+  border-radius: 12px 0px 0px 12px;
+  position: absolute;
+  background-color: #509999;
+  top: 17px;
+  left: -15px;
+  box-shadow: #1D3045 -4px 5px 0px, -7px 9px 4px #23282c91;
+}
+
+.fichaVerde:hover::after {
+  content: "";
+  display: block;
+  width: 18px;
+  height: 18px;
+  border-radius: 0px 12px 12px 0px;
+  position: absolute;
+  z-index: -2;
+  background-color: #509999;
+  top: 10px;
+  right: -14px;
+  box-shadow: #1D3045 -4px 5px 0px, -7px 7px 4px #23282c91;
+}
 
 /*-----------------------Media Query Paginas Responsive-----------------------*/
 
