--- a/css/estilos.css
+++ b/css/estilos.css
@@ -174,7 +174,7 @@ footer .grupo-2 {
   color: #509999;
 }
 
-/*-----------------------Inicio Sesión-----------------------*/
+/*------------------------------------------Inicio Sesión------------------------------------------*/
 
 .seccion-inicio-sesion {
   background-color: #315275;
@@ -214,13 +214,13 @@ footer .grupo-2 {
   font-weight: 300;
 }
 
-.texto-registrarse a {
+.texto-registrarse a, .texto-explicativo a {
   color: #F9F8F3;
   margin-left: 5px;
   font-weight: 400;
 }
 
-.texto-registrarse a:hover {
+.texto-registrarse a:hover, .texto-explicativo a:hover {
   color: #5f9950;
 }
 
@@ -268,10 +268,10 @@ footer .grupo-2 {
   background: none;
   border: none;
   background-color: #5f9950;
-  color: white;
+  color: #F9F8F3;
   border-radius: 12px;
-  font-family: "Trebuchet MS";
-  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   padding: 12px 16px;
   margin: 24px 92px;
   box-shadow: #37462C -4px 5px 0px, -7px 9px 3px #23282c91;
@@ -309,10 +309,10 @@ footer .grupo-2 {
   background: none;
   border: none;
   background-color: #509999;
-  color: white;
+  color: #F9F8F3;
   border-radius: 12px;
-  font-family: "Trebuchet MS";
-  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   padding: 12px 16px;
   margin: 24px 92px;
   box-shadow: #1D3045 -4px 5px 0px, -7px 9px 3px #23282c91;
@@ -343,6 +343,18 @@ footer .grupo-2 {
   top: 10px;
   right: -14px;
   box-shadow: #1D3045 -4px 5px 0px, -7px 7px 4px #23282c91;
+}
+
+/*------------------------------------------Registro------------------------------------------*/
+
+.texto-explicativo {
+  display: flex;
+  justify-content: center;
+  padding: 0px 40px;
+  margin-right: 10px;
+  margin-bottom: 40px;
+  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
 }
 
 /*-----------------------Media Query Paginas Responsive-----------------------*/
