--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -4,7 +4,7 @@
 body {
   padding:0%;
   margin:0%;
-  background-image: url(/img/pattern-fondo-web.png);
+  background-image: url(/src/img/pattern-fondo-web.png);
   background-size: cover;
   color: #23282C;
   font-family: 'Roboto', sans-serif;
