--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -13,6 +13,8 @@ body {
 
 .cabezote {
   display: flex;
+  position: relative;
+  z-index: 1;
   justify-content: space-between;
   background-color: #315275;
   height: 60px;
@@ -52,7 +54,6 @@ header nav ul li {
   display: inline-block;
   margin-top: 30px;
 }
-
 header nav ul li a {
   background-color: #509999;
   text-decoration: none;
@@ -68,8 +69,14 @@ header nav ul li a {
   border-radius: 12px;
 }
 
+.contenedor-opciones-nav {
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
+}
 
-/*Botones*/
+
+/*Botones
 
 .boton-superior {
   background-color: #509999;
@@ -94,7 +101,7 @@ header nav ul li a {
   font-size: 18px;
   font-weight: 400;
   vertical-align: middle;
-}
+}*/
 
 
 
@@ -260,7 +267,7 @@ footer .grupo-2 {
   width: 100%;
   height: 12px;
 }
-
+/*------------------------------------Botones------------------------------------*/
 /*Boton Básico*/
 
 .fichaVerde {
@@ -343,6 +350,136 @@ footer .grupo-2 {
   top: 10px;
   right: -14px;
   box-shadow: #1D3045 -4px 5px 0px, -7px 7px 4px #23282c91;
+}
+
+
+/*Boton Inicio Menu Navegación*/
+
+.fichaVerdeInicio {
+  position: relative;
+  background: none;
+  border: none;
+  background-color: #5f9950;
+  color: #F9F8F3;
+  border-radius: 12px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  padding: 12px 16px;
+  box-shadow: #37462C -4px 5px 0px, -7px 9px 3px #23282c91;
+}
+
+.fichaVerdeInicio::after {
+  content: "";
+  display: block;
+  width: 18px;
+  height: 18px;
+  border-radius: 0px 12px 12px 0px;
+  position: absolute;
+  z-index: -2;
+  background-color: #5f9950;
+  top: 10px;
+  right: -14px;
+  box-shadow: #37462C -4px 5px 0px, -7px 7px 4px #23282c91;
+}
+
+
+/*Boton Imagen Servicios*/
+
+.fichaAzulServicios {
+  background-color: transparent;
+  background-image: url(/src/img/ficha-azul-servicios-con-sombra.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position-y: bottom;
+  width: 100px;
+  text-align: center;
+  color: #F9F8F3;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  padding: 18px 30px 23px 34px;
+  padding-bottom: 23px;
+  margin: 0px 24px 0 18px;
+}
+
+.fichaAzulServicios:hover {
+  background-color: transparent;
+  background-image: url(/src/img/ficha-verde-servicios-con-sombra.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position-y: bottom;
+  width: 100px;
+  text-align: center;
+  color: #F9F8F3;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  padding: 18px 30px 23px 34px;
+  padding-bottom: 23px;
+  margin: 0px 24px 0 18px;
+}
+
+/*Boton Imagen Cuenta*/
+
+.fichaVerdeCuenta {
+  position: relative;
+  background: none;
+  border: none;
+  background-color: #5f9950;
+  color: #F9F8F3;
+  border-radius: 12px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  padding: 12px 16px;
+  box-shadow: #37462C -4px 5px 0px, -7px 9px 3px #23282c91;
+}
+
+.fichaAzulCuenta {
+  position: relative;
+  background: none;
+  border: none;
+  background-color: #509999;
+  color: #F9F8F3;
+  border-radius: 12px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  padding: 12px 16px;
+  box-shadow: #1D3045 -4px 5px 0px, -7px 9px 3px #23282c91;
+}
+.fichaAzulCuenta::before {
+  content:"";
+  display:block;
+  width: 18px;
+  height: 18px;
+  border-radius: 12px 0px 0px 12px;
+  position: absolute;
+  background-color: #509999;
+  top: 17px;
+  left: -15px;
+  box-shadow: #1D3045 -4px 5px 0px, -7px 9px 4px #23282c91;
+}
+
+.fichaAzulCuenta:hover {
+  position: relative;
+  background: none;
+  border: none;
+  background-color: #5f9950;
+  color: #F9F8F3;
+  border-radius: 12px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  padding: 12px 16px;
+  box-shadow: #37462C -4px 5px 0px, -7px 9px 3px #23282c91;
+}
+.fichaAzulCuenta:hover::before {
+  content:"";
+  display:block;
+  width: 18px;
+  height: 18px;
+  border-radius: 12px 0px 0px 12px;
+  position: absolute;
+  background-color: #5f9950;
+  top: 17px;
+  left: -15px;
+  box-shadow: #37462C -4px 5px 0px, -7px 9px 4px #23282c91;
 }
 
 /*------------------------------------------Registro------------------------------------------*/
