--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -77,6 +77,7 @@ header nav ul li a {
   justify-content: flex-end;
   align-content: center;
 }
+
 .menu-vertical {
   position: absolute;
   display: none;
@@ -142,6 +143,13 @@ footer {
 
 .box {
   padding: 40px;
+}
+
+.box-servicios {
+  padding: 30px 10px;
+  border-radius: 12px;
+  background-color: #ADD4D4;
+  margin: 20px 10px;
 }
 
 .box-especial{
@@ -304,6 +312,8 @@ footer .grupo-2 {
   border-radius: 12px;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
   padding: 12px 16px;
   margin: 24px 92px;
   box-shadow: #37462C -4px 5px 0px, -7px 9px 3px #23282c91;
@@ -603,6 +613,34 @@ footer .grupo-2 {
   margin: 0px 0px 0px 0px;
 }
 
+/*Sección*/
+.servicios {
+  background-color: #315275;
+  z-index: 1;
+  margin: 10% 0px;
+  border-radius: 12px;
+  text-align: center;
+  padding: 10px 0px;
+}
+
+.titulo-principal {
+  color: #F9F8F3;
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  font-family: 'Signika Negative', sans-serif;
+  font-weight: 500;
+}
+
+section .grupo-1 {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 10px 0px;
+}
+
+.seccion-slider {
+  background-color: #509999;
+}
 
 /*------------------------------------------Registro------------------------------------------*/
 
